Fix styling of classes ingredients and steps to make width mobile responsive and reset on mobile

--- a/styles.css
+++ b/styles.css
@@ -38,13 +38,25 @@ h3{
 .ingredients{
     font-size: 16px;
     color: #363431;
-    text-align: center;
+    width: 50%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .steps{
     font-size: 16px;
     color: #363431;
-    text-align: center;
+    width: 50%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+/**reset ul and ol width on mobile**/
+@media screen and {max-width: 480px}{
+    .steps,.ingredients{
+        width: 100%;
+    }
 }
 
 .recipe-image{
